Fix overlap reserve/waitlist button on mobile

--- a/assets/sass/site.scss
+++ b/assets/sass/site.scss
@@ -2389,14 +2389,14 @@ body {
     }
 
     button {
-      position: absolute;
-      top: 50%;
-      right: 10px;
+      font-size: 0.8em;
       margin: auto;
-      -webkit-transform: translate(0, -50%);
-      transform: translate(0, -50%);
 
       @include breakpoint(md) {
+        font-size: 0.9em;
+        position: absolute;
+        top: 50%;
+        right: 10px;
         visibility: hidden;
         right: auto;
         left: 50%;
@@ -2962,14 +2962,16 @@ body {
       &.instructor {
         margin-left: auto!important;
         margin-right: auto!important;
-        margin-bottom: -200px;
+        margin-bottom: -160px;
+        min-height: 150px;
 
         @include breakpoint(sm) {
           margin-top: 0;
+          margin-bottom: -220px;
         }
 
         @include breakpoint(md) {
-          margin-bottom: -220px;
+          min-height: 250px;
         }
       }
 
